@@ -39,6 +39,7 @@ Thank you to Damilola for his work, and to Google for sponsoring this project.
  * Add [`AbstractImage.get_renditions()`](image_renditions_multiple) for efficient generation of multiple renditions (Andy Babic)
  * Optimise queries in collection permission policies using cache on the user object (Sage Abdullah)
  * Phone numbers entered via a link chooser will now have any spaces stripped out, ensuring a valid `href="tel:..."` attribute (Sahil Jangra)
+ * Auto-select the `StreamField` block when only one block type is declared (Sébastien Corbin)
 
 ### Bug fixes
 
