@@ -15,6 +15,7 @@ Changelog
  * Add `AbstractImage.get_renditions()` for efficient generation of multiple renditions (Andy Babic)
  * Optimise queries in collection permission policies using cache on the user object (Sage Abdullah)
  * Phone numbers entered via a link chooser will now have any spaces stripped out, ensuring a valid href="tel:..." attribute (Sahil Jangra)
+ * Auto-select the `StreamField` block when only one block type is declared (Sébastien Corbin)
  * Fix: Prevent choosers from failing when initial value is an unrecognised ID, e.g. when moving a page from a location where `parent_page_types` would disallow it (Dan Braghis)
  * Fix: Move comment notifications toggle to the comments side panel (Sage Abdullah)
  * Fix: Remove comment button on InlinePanel fields (Sage Abdullah)
